Added some tests

--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
 		"url": "https://github.com/cerusjs/cerus-map/issues"
 	},
 	"scripts": {
+		"test": "./node_modules/.bin/mocha tests --reporter spec",
 		"lint": "eslint lib/"
 	},
 	"homepage": "https://github.com/cerusjs/cerus-map",
-	"dependencies": {}
+	"dependencies": {},
+	"devDependencies": {
+		"chai": "^4.1.2",
+		"mocha": "^5.1.1"
+	}
 }
